--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run tests
-      run: make test-linux
+      run:  docker build -f Dockerfile.ci --tag pointfreeco . && docker run  -f Dockerfile.ci --rm pointfreeco
+
