--- a/.pf-env.example
+++ b/.pf-env.example
@@ -8,6 +8,7 @@
   "GITHUB_CLIENT_SECRET": "deadbeef-client-secret",
   "MAILGUN_DOMAIN": "mg.domain.com",
   "MAILGUN_PRIVATE_API_KEY": "deadbeef-mg-api-key",
+  "RSS_USER_AGENT_WATCHLIST": "",
   "STRIPE_ENDPOINT_SECRET": "whsec_test",
   "STRIPE_PUBLISHABLE_KEY": "pk_test",
   "STRIPE_SECRET_KEY": "sk_test"
