Swift 5.2 Nightly Support
Former-commit-id: be7c2cf45d2416eb2bf55ec846e8a35182ed2c67

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,4 +1,4 @@
-FROM swift:5.1 as build
+FROM swiftlang/swift:nightly-5.2 as build
 
 RUN apt-get update
 RUN apt-get install -y cmake libpq-dev libssl-dev libz-dev openssl
@@ -20,7 +20,7 @@ RUN make -C cmark install
 RUN swift build --configuration release --product Server -Xswiftc -g -Xswiftc -Xfrontend -Xswiftc -warn-long-function-bodies=200 -Xswiftc -Xfrontend -Xswiftc -warn-long-expression-type-checking=200 \
   && swift build --configuration release --product Runner -Xswiftc -g -Xswiftc -Xfrontend -Xswiftc -warn-long-function-bodies=200 -Xswiftc -Xfrontend -Xswiftc -warn-long-expression-type-checking=200
 
-FROM swift:5.1-slim
+FROM swiftlang/swift:nightly-5.2-slim
 
 RUN apt-get update
 RUN apt-get install -y libpq-dev libssl-dev libz-dev
