--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run tests
-      run: make test-swift
+      run: make test-oss
 
   ubuntu:
     name: Ubuntu
