--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Homebrew Update
+      run: brew update
     - name: Install Dependencies
       run: brew install cmark postgresql
     - name: Start Postgres
