Revert "Is Postgres already installed?"
This reverts commit ce2a591dc176add473a17659899992c2e815db12.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,12 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Homebrew Update
+      run: brew update
     - name: Install Dependencies
-      run: brew install cmark
+      run: brew install cmark postgresql
+    - name: Start Postgres
+      run: brew services start postgresql
     - name: Run tests
       run: make test-oss
       env:
