--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,11 @@ jobs:
     - name: Homebrew Update
       run: brew update
     - name: Install Dependencies
-      run: brew install --force cmark postgresql
+      run: brew unlink libpq && brew install cmark postgresql
     - name: Start Postgres
       run: brew services start postgresql
+    - name: Select Xcode 11.3
+      run: sudo xcode-select -s /Applications/Xcode_11.3.app
     - name: Run tests
       run: make test-oss
       env:
