--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,15 @@ jobs:
     name: MacOS
     runs-on: macOS-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Homebrew Update
       run: brew update
     - name: Install Dependencies
-      run: brew install cmark postgresql
+      run: brew uninstall --ignore-dependencies libpq && brew install cmark postgresql
     - name: Start Postgres
       run: brew services start postgresql
+    - name: Select Xcode 11.3
+      run: sudo xcode-select -s /Applications/Xcode_11.3.app
     - name: Run tests
       run: make test-oss
       env:
@@ -23,6 +25,6 @@ jobs:
     name: Ubuntu
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Run tests
       run: make test-linux
