--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Check Docker
+      run: |
+        docker compose help
+        docker compose -v
     - name: Run tests
       run: make test-linux
