Try explicitly starting db?
Former-commit-id: 23ab3a3744ef218044a56b830a89f24d0c7679e9

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Check Docker
-      run: |
-        docker-compose help
-        docker-compose -v
+    - name: Start Postgres
+      run: docker-compose start db
     - name: Run tests
       run: make test-linux
+    - name: Stop Postgres
+      run: docker-compose start db
