--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Start Postgres
-      run: docker-compose start db
+      run: docker-compose create && docker-compose start db
     - name: Run tests
       run: make test-linux
     - name: Stop Postgres
