--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   db:
     environment:
       POSTGRES_DB: pointfreeco_development
+      POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_USER: pointfreeco
     image: postgres
     ports:
