--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,26 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v2
+
+    - name: Cache Dependencies
+      - uses: actions/cache@v1
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
+
     - name: Install Dependencies
       run: brew uninstall --ignore-dependencies libpq && brew install cmark postgresql || brew update
       env:
         HOMEBREW_NO_AUTO_UPDATE: 1
+
     - name: Start Postgres
       run: brew services start postgresql || brew update && brew services start postgresql
+
     - name: Select Xcode 11.3
       run: sudo xcode-select -s /Applications/Xcode_11.3.app
+
     - name: Run tests
       run: make test-oss
       env:
@@ -32,5 +44,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
+    - name: Cache Dependencies
+      - uses: actions/cache@v1
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
+
     - name: Run tests
       run: make test-linux
