--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Start Postgres
       run: brew services start postgresql || brew update && brew services start postgresql
     - name: Select Xcode 11.4
-      run: sudo xcode-select -s /Applications/Xcode_11.4_beta.app
+      run: sudo xcode-select -s /Applications/Xcode_11.4.app
     - name: Run tests
       run: make test-oss
       env:
