--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install Dependencies
-      run: brew install cmark
+      run: brew install cmark libpq
       #   run: brew uninstall --ignore-dependencies libpq && brew install cmark postgresql || brew update
       #   env:
       #     HOMEBREW_NO_AUTO_UPDATE: 1
