--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
       run: brew services start postgresql
     - name: Select Xcode 11.4
       run: sudo xcode-select -s /Applications/Xcode_11.4.app
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v2
     - name: Run tests
       run: make test-oss
       env:
