--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - '*'
-  pull_request:
-    branches:
-      - '*'
+on: [push, pull_request]
 
 jobs:
   build:
@@ -14,14 +8,17 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v2
+      # - name: Setup tmate session
+      #   uses: mxschmitt/action-tmate@v2
     - name: Install Dependencies
-      run: brew uninstall --ignore-dependencies libpq && brew install cmark postgresql || brew update
-      env:
-        HOMEBREW_NO_AUTO_UPDATE: 1
+      run: |
+        brew uninstall --ignore-dependencies libpq
+        brew install cmark postgresql
+        initdb /usr/local/var/postgres
     - name: Start Postgres
-      run: brew services start postgresql || brew update && brew services start postgresql
-    - name: Select Xcode 11.3
-      run: sudo xcode-select -s /Applications/Xcode_11.3.app
+      run: brew services start postgresql
+    - name: Select Xcode 11.4
+      run: sudo xcode-select -s /Applications/Xcode_11.4.app
     - name: Run tests
       run: make test-oss
       env:
