--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -5,7 +5,8 @@ RUN apt-get install -y cmake libpq-dev libssl-dev libz-dev openssl
 
 WORKDIR /build
 
-Copy Makefile .
+COPY .pf-env* ./
+COPY Makefile .
 COPY Package.swift .
 COPY Sources ./Sources
 COPY Tests ./Tests
@@ -18,4 +19,4 @@ RUN make -C cmark install
 
 RUN swift build --build-tests --enable-pubgrub-resolver --enable-test-discovery --jobs 1 -Xswiftc -D -Xswiftc OSS
 
-ENTRYPOINT [".build/debug/Server"]
+CMD .build/debug/Server
