--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
 name: Deploy
 
 on:
-  #push:
-  #  branches:
-  #    - master
+  push:
+    branches:
+      - '*'
+      #- master
   workflow_dispatch:
 
 jobs:
@@ -14,5 +15,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.4.6
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "pointfreeco"
+          heroku_app_name: "pointfreeco-stephen"
           heroku_email: "stephen.celis@gmail.com"
