--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,9 @@
 name: Deploy
 
 on:
-  push:
-    branches:
-      - '*'
-      #- master
+  #push:
+  #  branches:
+  #    - master
   workflow_dispatch:
 
 jobs:
