--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     name: MacOS
-    runs-on: macOS-latest
+    runs-on: macos-11.0
     steps:
     - uses: actions/checkout@v2
       # - name: Setup tmate session
@@ -14,8 +14,8 @@ jobs:
       run: brew install cmark
     - name: Start Postgres
       run: brew services start postgresql
-    - name: Select Xcode 12.4
-      run: sudo xcode-select -s /Applications/Xcode_12.4.app
+    - name: Select Xcode 12.5
+      run: sudo xcode-select -s /Applications/Xcode_12.5.app
     - name: Run tests
       run: make test-oss
       env:
