Add Continous Deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,18 @@
 name: Deploy
 
 on:
-  #push:
-  #  branches:
-  #    - master
-  workflow_dispatch:
+  push:
+    branches:
+      - '*'
+  # workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
       - uses: akhileshns/heroku-deploy@v3.4.6
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
