Add Continous Deployment (#758)
* Add Continous Deployment

* wip

* wip

* wip

* Update deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,21 @@
 name: Deploy
 
 on:
-  #push:
-  #  branches:
-  #    - master
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Check out submodules
+        uses: actions/checkout@v2
+        with:
+          repository: pointfreeco/episode-transcripts
+          token: ${{ secrets.GH_PAT }}
+          path: Sources/Models/Transcripts
       - uses: akhileshns/heroku-deploy@v3.4.6
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
