--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,16 @@ jobs:
     runs-on: macos-12
     steps:
     - uses: actions/checkout@v3
+    - uses: extractions/netrc@v1
+      with:
+        machine: github.com
+        username: user
+        password: ${{ secrets.GH_PAT }}
+    - uses: extractions/netrc@v1
+      with:
+        machine: api.github.com
+        username: user
+        password: ${{ secrets.GH_PAT }}
       # - name: Setup tmate session
       #   uses: mxschmitt/action-tmate@v2
     - name: Install Dependencies
@@ -37,5 +47,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: extractions/netrc@v1
+      with:
+        machine: github.com
+        username: user
+        password: ${{ secrets.GH_PAT }}
+    - uses: extractions/netrc@v1
+      with:
+        machine: api.github.com
+        username: user
+        password: ${{ secrets.GH_PAT }}
     - name: Run tests
       run: make test-linux
