--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -10,6 +10,8 @@ COPY Makefile .
 COPY Package.swift .
 COPY Sources ./Sources
 COPY Tests ./Tests
+COPY .netrc /root/.netrc
+RUN chmod 600 /root/.netrc
 
 RUN git clone https://github.com/commonmark/cmark \
   && cd cmark \
