--- a/.pf-env.example
+++ b/.pf-env.example
@@ -12,5 +12,6 @@
   "RSS_USER_AGENT_WATCHLIST": "",
   "STRIPE_ENDPOINT_SECRET": "whsec_test",
   "STRIPE_PUBLISHABLE_KEY": "pk_test",
-  "STRIPE_SECRET_KEY": "sk_test"
+  "STRIPE_SECRET_KEY": "sk_test",
+  "VIMEO_BEARER": "deadbeef"
 }
