--- a/.pf-env.example
+++ b/.pf-env.example
@@ -8,6 +8,7 @@
   "GITHUB_CLIENT_SECRET": "deadbeef-client-secret",
   "MAILGUN_DOMAIN": "mg.domain.com",
   "MAILGUN_PRIVATE_API_KEY": "deadbeef-mg-api-key",
+  "PF_COMMUNITY_SLACK_INVITE_URL": "https://join.slack.com/t/pointfreecommunity/shared_invite/zt-1o8l02r36-lygnfRjdoCZA3GtpG9bo_Q",
   "REGIONAL_DISCOUNT_COUPON_ID": "regional-discount",
   "RSS_USER_AGENT_WATCHLIST": "",
   "STRIPE_ENDPOINT_SECRET": "whsec_test",
