--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Sources/Transcripts"]
-	path = Sources/PrivateTranscripts/
+[submodule "Sources/Transcripts/Transcripts"]
+	path = Sources/Transcripts/Transcripts
 	url = https://github.com/pointfreeco/episode-transcripts
