--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -12,15 +12,13 @@ concurrency:
 jobs:
   swift_format:
     name: swift-format
-    runs-on: macOS-12
+    runs-on: macOS-13
     steps:
       - uses: actions/checkout@v3
       - name: Xcode Select
-        run: sudo xcode-select -s /Applications/Xcode_14.0.1.app
-      - name: Tap
-        run: brew tap pointfreeco/formulae
+        run: sudo xcode-select -s /Applications/Xcode_14.3.1.app
       - name: Install
-        run: brew install Formulae/swift-format@5.7
+        run: brew install swift-format
       - name: Format
         run: make format
       - uses: stefanzweifel/git-auto-commit-action@v4
