--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -7,6 +7,7 @@ WORKDIR /build
 
 COPY .pf-env* ./
 COPY Makefile .
+COPY Package.resolved .
 COPY Package.swift .
 COPY Sources ./Sources
 COPY Tests ./Tests
